--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,21 +24,42 @@
             android:id="@+id/true_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/true_button" />
+            android:text="@string/true_button"
+            android:insetRight="2dp" />
 
         <Button
             android:id="@+id/false_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/false_button" />
+            android:text="@string/false_button"
+            android:insetLeft="2dp" />
 
     </LinearLayout>
 
-    <Button
-        android:id="@+id/next_button"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/next_button"
-        app:icon="@drawable/arrow_right"
-        app:iconGravity="end" />
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/previous_button"
+            android:layout_width="135dp"
+            android:layout_height="wrap_content"
+            android:insetRight="2dp"
+
+            android:text="@string/previous_button"
+            app:icon="@drawable/arrow_left" />
+
+        <Button
+            android:id="@+id/next_button"
+            android:layout_width="135dp"
+            android:layout_height="wrap_content"
+
+            android:insetLeft="2dp"
+            android:text="@string/next_button"
+            app:icon="@drawable/arrow_right"
+            app:iconGravity="end" />
+
+    </LinearLayout>
+
 </LinearLayout>
